# onnxruntime_server

./: .clang-format  .dockerignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  onnxruntime_server.cc  onnxruntime_server.cpp  serving.cc  serving.h
.github/workflows/: cmake-multi-platform.yml  docker.yml
proto/: CMakeLists.txt
proto/inference/: inference.proto
